--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>test</p>
+<html>
+  <p class="p1">Backup for Surckre.org</p>
+</html>
+
+<style>
+    .p1{
+        font-size:32;
+    }
+</style>
