--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
 <html>
-  <p class="p1">Backup for Surckre.org</p>
+  <h1>this is just a backup site for</h1> <a href="https://surckre.org">surckre.org</a>
 </html>
-
-<style>
-    .p1{
-        font-size:32;
-    }
-</style>
