--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <h1>this is just a backup site for</h1> <a href="https://surckre.org">surckre.org</a>
+  <h1>this is just a backup site for <a href="https://surckre.org">surckre.org</a> </h1> 
 </html>
