--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<html>
-  <h1>this is just a backup site for <a href="https://surckre.org">surckre.org</a> </h1> 
-</html>
+<meta http-equiv="refresh" content="0; url=https://surckre.org">
